--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="username">username</string>
     <string name="daftar_akun">Belum punya akun? | daftar</string>
     <string name="sign">SIGN UP</string>
+    <string name="akun_login">Sudah punya akun? | Login</string>
 </resources>
