--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,8 @@
     <string name="text_waktu">Waktu</string>
     <string name="text_img_desc_pilih_waktu">Pilih Waktu</string>
     <string name="text_img_desc_pilih_tanggal">Pilih Tanggal</string>
+    <string name="pilih_teknisi_mu">Pilih Teknisi Mu!</string>
+    <string name="pesan_sekarang">Pesan Sekarang</string>
 
 
     <string-array name="data_jenis_layanan">
