Menghubungkan dan menambahkan fungsi Add Orders..

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="camera_upload">Upload</string>
     <string name="camera_batal">Batal</string>
     <string name="camera_ambil_gambar">Ambil Gambar</string>
+    <string name="error_data">Ups Terjadi Kesalahan</string>
 
 
     <string-array name="data_jenis_layanan">
