Menambakan penyeleksian username di signup, mengubah nama homee, menambahkan constant value

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,26 @@
     <string name="idr_50_000">IDR 50.000</string>
     <string name="payoder_bayar">BAYAR</string>
     <string name="detailorder_rating">Rating</string>
+    <string name="error_data">Ups Terjadi Kesalahan</string>
+    <string name="text_pilih_layanan">Pilih Layanan</string>
+    <string name="text_tanggal">Tanggal</string>
+    <string name="text_waktu">Waktu</string>
+    <string name="text_img_desc_pilih_waktu">Pilih Waktu</string>
+    <string name="text_img_desc_pilih_tanggal">Pilih Tanggal</string>
+    <string name="pilih_teknisi_mu">Pilih Teknisi Mu!</string>
+    <string name="pesan_sekarang">Pesan Sekarang</string>
+    <string name="camera_upload">Upload</string>
+    <string name="camera_batal">Batal</string>
+    <string name="camera_ambil_gambar">Ambil Gambar</string>
+    <string-array name="data_jenis_layanan">
+        <item>Konsultasi</item>
+        <item>Panggil Teknisi</item>
+    </string-array>
+
+    <string-array name="data_kota">
+        <item>Jakarta</item>
+        <item>Surabaya</item>
+        <item>Magelang</item>
+        <item>Surakarta</item>
+    </string-array>
 </resources>
