Menambahkan User Permission, dan menambahkan field baru.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,6 +102,7 @@
     <string name="camera_upload">Upload</string>
     <string name="camera_batal">Batal</string>
     <string name="camera_ambil_gambar">Ambil Gambar</string>
+    <string name="nama_lengkap">Nama Lengkap</string>
     <string-array name="data_jenis_layanan">
         <item>Konsultasi</item>
         <item>Panggil Teknisi</item>
