Menanyambungkan antara riwayat pesanan dan detail pesanan dengan API, memperbaiki bug pada profile, login, dan register.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
     <string name="teknisi_komputer">Teknisi Komputer</string>
     <string name="teknisi_televisi">Teknisi Televisi</string>
     <string name="teknisi_handphone">Teknisi Handphone</string>
+    <string name="alamat_anda">Alamat Anda</string>
     <string-array name="data_jenis_layanan">
         <item>Konsultasi</item>
         <item>Panggil Teknisi</item>
