--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,7 @@
     <string name="teknisi_handphone">Teknisi Handphone</string>
     <string name="alamat_anda">Alamat Anda</string>
     <string name="booking_pilih_area">Pilih Area</string>
+    <string name="tv_label_classification">Gambarnya Adalah!</string>
     <string-array name="data_jenis_layanan">
         <item>Konsultasi</item>
         <item>Panggil Teknisi</item>
