--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="text_action_akun_login">Login</string>
     <string name="text_action_lupa_password">Lupa Password?</string>
 
+    <string name="send_success">Berhasil terkirim</string>
+    <string name="send_error">Gagal terkirim</string>
+
     <string name="text_label_register">Belum punya akun?</string>
     <string name="text_label_login">Sudah punya akun?</string>
     <string name="text_label_email">Email</string>
