--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,8 +70,8 @@
     <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
     <string name="info_invoice">#PO0001</string>
     <string name="pemesanan_selesai">Pemesanan anda untuk pesanan 123x4xxx telah selesai</string>
-    <string name="tab_text_1">Myorder</string>
-    <string name="tab_text_2">Finishorder</string>
+    <string name="tab_text_1">Belum Selesai</string>
+    <string name="tab_text_2">Selesai</string>
     <string name="status">Status</string>
     <string name="process">Process</string>
     <string name="nama_teknisi">Teknisi A</string>
